--- a/app/Resources/views/Wzory/protokol_dziedziczenia.html.twig
+++ b/app/Resources/views/Wzory/protokol_dziedziczenia.html.twig
@@ -30,18 +30,18 @@
                     <li class="lineheight28px" style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);"
                         data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
                         {{ spadkobierca.imie }} {{ spadkobierca.nazwisko }}, {% if spadkobierca.plec == 1 %} córka {% else %} syn {% endif %}
-                        {{ spadkobierca.imieOjca | imieMeskie }} i {{ spadkobierca.imieMatki | imieZenskie}}, o numerze pesel {{ spadkobierca.pesel }},
-                        urodzony w  <span class="niepewne" >{{ spadkobierca.miejsceUrodzenia }}</span>
+                        {{ spadkobierca.imieOjca | imieMeskie }} i {{ spadkobierca.imieMatki | imieZenskie}} o numerze pesel {{ spadkobierca.pesel }},
+                        urodzony w  <span class="niepewne" >{{ spadkobierca.miejsceUrodzenia | miasto }}</span>
                         {% if spadkobierca.plec == 1 %} zamieszkała {% else %} zamieszkały {% endif %}
-                        według oświadczenia w mieście {{ spadkobierca.miastoZamieszkania }}
+                        według oświadczenia w {{ spadkobierca.miastoZamieszkania | miasto }}
                         {% if spadkobierca.typObiektuZamieszkania == 0 %}{{ spadkobierca.numerDomuZamieszkania }}{% if spadkobierca.numerMieszkaniaZamieszkania is not null and spadkobierca.numerMieszkaniaZamieszkania != "" %} / {{ spadkobierca.numerMieszkaniaZamieszkania }}{% endif %}
                     {% elseif spadkobierca.typObiektuZamieszkania == 1 %} przy ulicy {{ spadkobierca.nazwaObiektuZamieszkania }} {{ spadkobierca.numerDomuZamieszkania }} {% if spadkobierca.numerMieszkaniaZamieszkania is not null and spadkobierca.numerMieszkaniaZamieszkania == "" %} / {{ spadkobierca.numerMieszkaniaZamieszkania }}{% endif %}
                     {% elseif spadkobierca.typObiektuZamieszkania == 2 %} os. {{ spadkobierca.nazwaObiektuZamieszkania }} {{ spadkobierca.numerDomuZamieszkania }} {% if spadkobierca.numerMieszkaniaZamieszkania is not null and spadkobierca.numerMieszkaniaZamieszkania == "" %} / {{ spadkobierca.numerMieszkaniaZamieszkania }}{% endif %}
                     {% elseif spadkobierca.typObiektuZamieszkania == 3 %} przy alei {{ spadkobierca.nazwaObiektuZamieszkania }} {{ spadkobierca.numerDomuZamieszkania }} {% if spadkobierca.numerMieszkaniaZamieszkania is not null and spadkobierca.numerMieszkaniaZamieszkania == "" %} / {{ spadkobierca.numerMieszkaniaZamieszkania }}{% endif %}
                         {% endif %},
                         {% if spadkobierca.plec == 1 %} legitymującej {% else %} legitymującego {% endif %} się dowodem osobistym wydanym za numerem {{ spadkobierca.numerDowodu }} z datą ważności do dnia
-                        {{ spadkobierca.dataWaznosciDowodu | dataSlownie }} ({{ spadkobierca.dataWaznosciDowodu | date('Y-m-d') }}) roku
-                        {% if loop.revindex == 2 %} i{% else %}{% if not loop.last %},{% else %}.{% endif %}{% endif %}
+                        {{ spadkobierca.dataWaznosciDowodu | dataSlownie }} ({{ spadkobierca.dataWaznosciDowodu | date('Y-m-d') }})
+                        roku{% if loop.revindex == 2 %} i{% else %}{% if not loop.last %},{% else %}.{% endif %}{% endif %}
                     </li>
                     {#    {% endif %}#}
                 {% endfor %}
@@ -97,10 +97,12 @@
             {% if stawajacy | length > 1 %}żądają{% else %}żąda{% endif %}
             dokonania poświadczenia dziedziczenia, że spadek po
             {% if zgoniarz.plec == 1 %}zmarłej{% else %}zmarłym{% endif %}
-            dnia {{ form.dataSmierci | dataSlownie }} ({{ form.dataSmierci | date('d.m.Y') }}) roku w mieście <span class="niepewne" >{{ form.miejsceZgonu }}</span>
+            dnia {{ form.dataSmierci | dataSlownie }} ({{ form.dataSmierci | date('d.m.Y') }}) roku w
+            <span class="niepewne" >{{ form.miejsceZgonu | miasto }}</span>
 
-            <span class="niepewne" >{{ zgoniarz.imie }} {{ zgoniarz.nazwisko }}</span> o numerze pesel {{ zgoniarz.pesel }}, {% if zgoniarz.plec == 1 %}córce{% else %}synu{% endif %} {{ zgoniarz.imieOjca | imieMeskie }} i {{ zgoniarz.imieMatki | imieZenskie }},
-            {% if zgoniarz.plec == 1 %}zamieszkałej{% else %}zamieszkałym{% endif %} w mieście <span class="niepewne" >{{ zgoniarz.miastoZamieszkania }}</span>
+            <span class="niepewne" >{{ zgoniarz.imie | imieMeskieMiejscownik }} {{ zgoniarz.nazwisko | nazwiskoMeskieMiejscownik }}</span>
+            o numerze pesel {{ zgoniarz.pesel }}, {% if zgoniarz.plec == 1 %}córce{% else %}synu{% endif %} {{ zgoniarz.imieOjca | imieMeskie }} i {{ zgoniarz.imieMatki | imieZenskie }},
+            {% if zgoniarz.plec == 1 %}zamieszkałej{% else %}zamieszkałym{% endif %} w <span class="niepewne" >{{ zgoniarz.miastoZamieszkania | miasto }}</span>
             {% if zgoniarz.typObiektuZamieszkania == 0 %}{{ zgoniarz.numerDomuZamieszkania }}{% if zgoniarz.numerMieszkaniaZamieszkania is not null and zgoniarz.numerMieszkaniaZamieszkania != "" %} / {{ zgoniarz.numerMieszkaniaZamieszkania }}{% endif %}
             {% elseif zgoniarz.typObiektuZamieszkania == 1 %} przy ulicy {{ zgoniarz.nazwaObiektuZamieszkania }} {{ zgoniarz.numerDomuZamieszkania }} {% if zgoniarz.numerMieszkaniaZamieszkania is not null and zgoniarz.numerMieszkaniaZamieszkania != "" %} / {{ zgoniarz.numerDomuZamieszkania }}{% endif %}
             {% elseif zgoniarz.typObiektuZamieszkania == 2 %} os. {{ zgoniarz.nazwaObiektuZamieszkania }} {{ zgoniarz.numerDomuZamieszkania }} {% if zgoniarz.numerMieszkaniaZamieszkania is not null and zgoniarz.numerMieszkaniaZamieszkania != "" %} / {{ zgoniarz.numerDomuZamieszkania }}{% endif %}
@@ -115,7 +117,7 @@
                                 {% if spadkobierca.plec == 1 %} córka {% else %} syn {% endif %}
                             {{ spadkobierca.imieOjca | imieMeskie }} i {{ spadkobierca.imieMatki | imieZenskie}} {% if spadkobierca.plec == 1 %} urodzona {% else %} urodzony {% endif %} {{ spadkobierca.pesel | dataZPeselu | dataSlownie }}
                         ({{ spadkobierca.pesel | dataZPeselu | date('Y-m-d') }}) roku
-                        w <span class="niepewne" >{{ spadkobierca.miejsceUrodzenia }}</span>
+                        w <span class="niepewne" >{{ spadkobierca.miejsceUrodzenia | miasto }}</span>
                         {% if spadkobiorcy|length > 1 %}
                             w wysokości <span class="niepewne" >{{ spadkobierca.udzialSpadku }}</span> spadku{% if loop.revindex == 2 %} oraz{% else %}{% if not loop.last %},{% else %}.{% endif %}{% endif %}
                         {% endif %}
@@ -130,8 +132,8 @@
               data-mce-style="font-family: 'times new roman', times, serif;  font-size: 14pt; padding-left: 30px; color: #000000;">
         Nadto {% if stawajacy | length > 1 %}Stawający oświadczają{% else %}{% if stawajacy[0].plec == 1 %}Stawająca oświadcza{% else %}Stawający oświadcza{% endif %}{% endif %},
         że nie ma żadnych przeszkod do sporządzenia poświadczenia dziedziczenia oraz {% if stawajacy | length > 1 %}przedkładają{% else %}przedkłada{% endif %} odpis skr&oacute;cony aktu zgonu
-        <span class="niepewne" >{{ zgoniarz.imie }} {{ zgoniarz.nazwisko }}</span> wydany przez Urząd Stanu Cywilnego w
-        <span class="niepewne" >{{ form.miejsceWydaniaAktuZgonu }}</span> dnia {{ form.dataWydaniaAktuZgonu | dataSlownie }} ({{ form.dataWydaniaAktuZgonu | date('Y-m-d') }})
+        <span class="niepewne" >{{ zgoniarz.imie | imieMeskie }} {{ zgoniarz.nazwisko }}</span> wydany przez Urząd Stanu Cywilnego w
+        <span class="niepewne" >{{ form.miejsceWydaniaAktuZgonu | miasto }}</span> dnia {{ form.dataWydaniaAktuZgonu | dataSlownie }} ({{ form.dataWydaniaAktuZgonu | date('Y-m-d') }})
         roku zgodny z treścią aktu zgonu o oznaczeniu: {{ form.numerAktuZgonu }}.
         </span>
     </p>
@@ -139,7 +141,7 @@
         <span style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);" data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;" >
        §.2 {% if stawajacy | length > 1 %}Stawający{% else %}{% if stawajacy[0].plec == 1 %}Stawająca{% else %}Stawający{% endif %}{% endif %}
             {% for osoba in stawajacy %}
-            {{ osoba.nazwiskoImie }}{% if loop.revindex == 2 %} oraz{% else %}{% if not loop.last %},{% else %}.{% endif %}{% endif %}
+            {{ osoba.nazwiskoImie }}{% if loop.revindex == 2 %} oraz{% else %}{% if not loop.last %},{% else %}{% endif %}{% endif %}
             {% endfor %}
             oświadczają, że:
         </span>
@@ -186,11 +188,11 @@
     <p style="text-align: justify;" data-mce-style="text-align: justify;" class="lineheight28px">
         <span style="padding-left: 30px; font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);" data-mce-style="padding-left: 30px; font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
             Stawający oświadczyli, że do kręgu spadkobierców ustawowych po {% if zgoniarz.plec == 1 %}zmarłej{% else %}zmarłym{% endif %}
-        <span class="niepewne" >{{ zgoniarz.imie }} {{ zgoniarz.nazwisko }}</span> {% if spadkobiorcy | length > 1 %}należą{% else %}należy{% endif %}:
+        <span class="niepewne" >{{ zgoniarz.imie | imieMeskieMiejscownik }} {{ zgoniarz.nazwisko | nazwiskoMeskieMiejscownik }}</span> {% if spadkobiorcy | length > 1 %}należą{% else %}należy{% endif %}:
         {% for spadkobierca in spadkobiorcy %}
             {% if zgoniarz.plec == 1 %}jej{% else %}jego{% endif %} {{ spadkobierca.stopienPokrewienstwa | pokrewienstwoSlownie }} {{ spadkobierca.imie }} {{ spadkobierca.nazwisko }},
             {% if spadkobierca.plec == 1 %} córka {% else %} syn {% endif %}{{ spadkobierca.imieOjca | imieMeskie }} i {{ spadkobierca.imieMatki | imieZenskie}}
-            {% if loop.revindex == 2 %} oraz{% else %}{% if not loop.last %},{% else %}.{% endif %}{% endif %}
+            {% if loop.revindex == 2 %} oraz{% else %}{% if not loop.last %},{% else %}{% endif %}{% endif %}
         {% endfor %}
     {#    <u>jej/jego</u> <u>syn/c&oacute;rka/mąż/żona/brat/kuzyn/babcia/dziadek</u> <u>Imię (imiona) nazwisko kolejnego spadkobiercy</u>, syn imię <u>ojca i matki kolejnego spadkodawcy</u>, &nbsp;#}
     {#    oraz <u>jej/jego</u> <u>syn/c&oacute;rka/mąż/żona/brat/kuzyn/babcia/dziadek</u> <u>Imię (imiona) nazwisko kolejnego spadkobiercy</u>, syn imię <u>ojca i matki kolejnego spadkodawcy</u>, #}
@@ -217,7 +219,9 @@
                          data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
                             - odpisu skróconego aktu urodzenia
 {#                    <u>Imię (imiona) i Nazwisko kolejnego </u><u>spadkobiercy</u> #}
-                                <span class="niepewne" >{{ akt.imieUczestniczacego }} {{ akt.nazwiskoUczestniczacego }}</span> wydanego przez
+                                <span class="niepewne" >
+                                    {{ akt.imieUczestniczacego }} {{ akt.nazwiskoUczestniczacego }}
+                                </span> wydanego przez
                                 {{ akt.urzad }} dnia
 {#                <u>dwudziestego czwartego grudnia dwa tysiące osiemnastego (24.XII.2018)(data wydania dokumentu)</u>#}
                                 {{ akt.dataWydania | dataSlownie }} ({{ akt.dataWydania | date('d.m.Y') }})
@@ -289,13 +293,13 @@
     </p>
     <p style="text-align: justify;" data-mce-style="text-align: justify;" class="lineheight28px">
         <span style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);" data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
-            - nie zostało wydane postanowienie o stwierdzenie nabycia spadku po <span class="niepewne" >{{ zgoniarz.imie }} {{ zgoniarz.nazwisko }}</span>, ani nie toczy się postępowanie o
+            - nie zostało wydane postanowienie o stwierdzenie nabycia spadku po <span class="niepewne" >{{ zgoniarz.imie | imieMeskieMiejscownik }} {{ zgoniarz.nazwisko | nazwiskoMeskieMiejscownik }}</span>, ani nie toczy się postępowanie o
             stwierdzenia nabycia spadku po {% if zgoniarz.plec == 1 %}niej{% else %}nim{% endif %},
         </span>
     </p>
     <p style="text-align: justify;" data-mce-style="text-align: justify;" class="lineheight28px">
         <span style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);" data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
-            - nie został sporządzony akt poświadczenia dziedziczenia po <span class="niepewne" >{{ zgoniarz.imie }} {{ zgoniarz.nazwisko }}</span>
+            - nie został sporządzony akt poświadczenia dziedziczenia po <span class="niepewne" >{{ zgoniarz.imie | imieMeskieMiejscownik }} {{ zgoniarz.nazwisko | nazwiskoMeskieMiejscownik }}</span>
         </span>
     </p>
     <p style="text-align: justify;" data-mce-style="text-align: justify;" class="lineheight28px">
@@ -306,7 +310,7 @@
     </p>
     <p style="text-align: justify;" data-mce-style="text-align: justify;" class="lineheight28px">
         <span style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);" data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
-            - w skład spadku po <span class="niepewne" >{{ zgoniarz.imie }} {{ zgoniarz.nazwisko }}</span> nie wchodzi prawo własności nieruchomości położonej poza granicami Rzeczypospolitej Polskiej
+            - w skład spadku po <span class="niepewne" >{{ zgoniarz.imie | imieMeskieMiejscownik }} {{ zgoniarz.nazwisko | nazwiskoMeskieMiejscownik }}</span> nie wchodzi prawo własności nieruchomości położonej poza granicami Rzeczypospolitej Polskiej
             ani inne prawa rzeczowe lub posiadanie nieruchomości położonej za granicą,
         </span>
     </p>
