--- a/app/Resources/views/Wzory/oswiadczenie_o_przyjeciu_spadku.html.twig
+++ b/app/Resources/views/Wzory/oswiadczenie_o_przyjeciu_spadku.html.twig
@@ -32,7 +32,7 @@
         <span style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);" data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
         {{ spadkobierca.imie }} {{ spadkobierca.nazwisko }}
         {% if spadkobierca.plec == 1 %} córka {% else %} syn {% endif %}
-        {{ spadkobierca.imieOjca | imieMeskie }} i {{ spadkobierca.imieMatki | imieZenskie}}, o numerze pesel {{ spadkobierca.pesel }},
+        {{ spadkobierca.imieOjca | imieMeskieDopelniacz }} i {{ spadkobierca.imieMatki | imieZenskie}}, o numerze pesel {{ spadkobierca.pesel }},
         urodzony w  <span class="niepewne" >{{ spadkobierca.miejsceUrodzenia | miasto }}</span>
         {% if spadkobierca.plec == 1 %} zamieszkała {% else %} zamieszkały {% endif %} według oświadczenia w
         {{ spadkobierca.miastoZamieszkania | miasto }}
@@ -78,7 +78,7 @@
             §.1 {% if spadkobierca.plec == 1 %}Stawająca{% else %}Stawający{% endif %} {{ spadkobierca.imie }} {{ spadkobierca.nazwisko }} oświadcza, że przyjmuje {% if spadkobierca.typDziedziczenia == 1 %}wprost{% else %}z dobrodziejstwem intentarza{% endif %} przypadajacy {% if spadkobierca.plec == 1 %}jej{% else %}jemu{% endif %}
             z mocy ustawy spadek po {% if zgoniarz.plec == 1 %}zmarłej{% else %}zmarłym{% endif %}
             <span class="niepewne" >{{ zgoniarz.imie | imieMeskieMiejscownik }} {{ zgoniarz.nazwisko | nazwiskoMeskieMiejscownik }}</span> , {% if zgoniarz.plec == 1 %}córce{% else %}synu{% endif %}
-            {{ zgoniarz.imieOjca | imieMeskie }} i {{ zgoniarz.imieMatki | imieZenskie }}, {% if zgoniarz.plec == 1 %}zmarłej{% else %}zmarłym{% endif %} dnia
+            {{ zgoniarz.imieOjca | imieMeskieDopelniacz }} i {{ zgoniarz.imieMatki | imieZenskie }}, {% if zgoniarz.plec == 1 %}zmarłej{% else %}zmarłym{% endif %} dnia
             {{ form.dataSmierci | dataSlownie }} ({{ form.dataSmierci | date('d.m.Y') }}) roku w <span class="niepewne" >{{ form.miejsceZgonu | miasto }}</span>,
             ostatnio stale {% if zgoniarz.plec == 1 %}zamieszkałej{% else %}zamieszkałym{% endif %} w <span class="niepewne" >{{ zgoniarz.miastoZamieszkania | miasto }}</span>.
             {% if zgoniarz.typObiektuZamieszkania == 0 %}{{ zgoniarz.numerDomuZamieszkania }}{% if zgoniarz.numerMieszkaniaZamieszkania is not null and zgoniarz.numerMieszkaniaZamieszkania != "" %} / {{ zgoniarz.numerMieszkaniaZamieszkania }}{% endif %}
@@ -98,7 +98,7 @@
                     <span style="font-family: 'times new roman', times, serif; font-size: 14pt;" data-mce-style="font-family: 'times new roman', times, serif; font-size: 14pt;">
                     {{ spadkobiercaFor.imie }} {{ spadkobiercaFor.nazwisko }},
                     {% if spadkobiercaFor.plec == 1 %} córka {% else %} syn {% endif %}
-                        {{ spadkobiercaFor.imieOjca | imieMeskie }} i {{ spadkobiercaFor.imieMatki | imieZenskie}} {% if spadkobiercaFor.plec == 1 %} zamieszkała {% else %} zamieszkały {% endif %} w
+                        {{ spadkobiercaFor.imieOjca | imieMeskieDopelniacz }} i {{ spadkobiercaFor.imieMatki | imieZenskie}} {% if spadkobiercaFor.plec == 1 %} zamieszkała {% else %} zamieszkały {% endif %} w
                         {{ spadkobiercaFor.miastoZamieszkania | miasto }}
                         {% if spadkobiercaFor.typObiektuZamieszkania == 0 %}{{ spadkobiercaFor.numerDomuZamieszkania }}{% if spadkobiercaFor.numerMieszkaniaZamieszkania is not null and spadkobiercaFor.numerMieszkaniaZamieszkania != "" %} / {{ spadkobiercaFor.numerMieszkaniaZamieszkania }}{% endif %}
                         {% elseif spadkobiercaFor.typObiektuZamieszkania == 1 %} przy ulicy {{ spadkobiercaFor.nazwaObiektuZamieszkania }} {{ spadkobiercaFor.numerDomuZamieszkania }} {% if spadkobiercaFor.numerMieszkaniaZamieszkania is not null and spadkobiercaFor.numerMieszkaniaZamieszkania == "" %} / {{ spadkobiercaFor.numerMieszkaniaZamieszkania }}{% endif %}
@@ -110,7 +110,7 @@
                 {% endif %}
             {% endfor %}
             , a nadto że nie wie o istnieniu jakichkolwiek testamentów pozostawionych
-            przez {% if zgoniarz.plec == 1 %}zmarłą{% else %}zmarłego{% endif %} <span class="niepewne">{{ zgoniarz.imie | imieMeskie }} {{ zgoniarz.nazwisko }}</span>
+            przez {% if zgoniarz.plec == 1 %}zmarłą{% else %}zmarłego{% endif %} <span class="niepewne">{{ zgoniarz.imie | imieMeskieDopelniacz}} {{ zgoniarz.nazwisko | nazwiskoMeskieDopelniacz }}</span>
         </span>
     </p>
     <p style="text-align: justify;" data-mce-style="text-align: justify;">
@@ -120,7 +120,7 @@
     </p>
     <p style="text-align: justify;" data-mce-style="text-align: justify;">
         <span style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);" data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
-            a/ odpis skrócony aktu zgonu <span class="niepewne">{{ zgoniarz.imie | imieMeskie }} {{ zgoniarz.nazwisko }}</span> wydany
+            a/ odpis skrócony aktu zgonu <span class="niepewne">{{ zgoniarz.imie | imieMeskieDopelniacz }} {{ zgoniarz.nazwisko | nazwiskoMeskieDopelniacz }}</span> wydany
             przez Urząd Stanu Cywilnego w {{ form.miejsceWydaniaAktuZgonu | miasto }} dnia
             {{ form.dataWydaniaAktuZgonu | dataSlownie }} ({{ form.dataWydaniaAktuZgonu | date('Y-m-d') }})
             roku zgodny z treścią aktu zgonu o oznaczeniu: {{ form.numerAktuZgonu }}.
@@ -176,10 +176,10 @@
         2004 roku o podatku od towarów i usług (tj. Dz.U. z 2019 r., poz. 675 ze
         zm.).
     </span></p>
-    <p><span style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);"
-             data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
-                <strong>Akt ten odczytano, przyjęto i podpisano: </strong>
-            </span>
+    <p>
+        <span style="font-size: 14pt; font-family: 'times new roman', times, serif; color: rgb(0, 0, 0);" data-mce-style="font-size: 14pt; font-family: 'times new roman', times, serif; color: #000000;">
+            <strong>Akt ten odczytano, przyjęto i podpisano: </strong>
+        </span>
     </p>
     <p style="padding-left: 200px; text-align: justify;" data-mce-style="padding-left: 200px; text-align: justify;">
             <span style="font-family: 'times new roman', times, serif;  font-size: 12pt;"
